--- a/jasmine-standalone-3.1.0/SpecRunner.html
+++ b/jasmine-standalone-3.1.0/SpecRunner.html
@@ -19,6 +19,8 @@
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script>
 
+  <script src="src/main.js"></script>
+
 </head>
 
 <body>
